fix new vendor form alignment

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,5 @@
 /** {
-  border: 2px solid red;
+  border: 1px solid red;
 }*/
 
 html {
